# unicode-utilities

./: .gitignore  CMakeLists.txt  README  export.h  unicode-common.cpp  unicode-common.h  unicode-encode.cpp  unicode-encode.h  unicode-utf16.cpp  unicode-utf16.h  unicode-utf8.cpp  unicode-utf8.h
common/: unicode-common.cpp  unicode-common.h
test/: CMakeLists.txt  TestUnicodeUcs32.cpp  TestUnicodeUtf16.cpp  TestUnicodeUtf8.cpp  TestUtf8String.cpp
utf16/: unicode-utf16.cpp  unicode-utf16.h
utf8/: unicode-utf8.cpp  unicode-utf8.h
